Prevent overflow

--- a/scss/input.scss
+++ b/scss/input.scss
@@ -29,6 +29,7 @@ $primary_color: #6200ee;
   > input,
   textarea {
     width: 100%;
+    max-width: 100%;
     height: 56px;
     border: none;
     border-bottom: 2px solid #8e8e8f;
